chore: update gitconfig

--- a/.local_gitconfig.md
+++ b/.local_gitconfig.md
@@ -1,3 +1,8 @@
+Change the Chezmoi repo remote url to https
+```
+git remote set-url origin https://benjamin-awd@github.com/benjamin-awd/dotfiles.git
+```
+
 Add this line to ~/.gitconfig
 ```
 [includeIf "gitdir:~/.local/share/chezmoi/"]
@@ -9,7 +14,7 @@ Create an empty .gitconfig in share folder
 touch ~/.local/share/.gitconfig
 ```
 
-Use these settings
+Add these settings
 ```
 [user]
     email = benjamindornel@gmail.com
@@ -18,9 +23,4 @@ Use these settings
 
 [commit]
     gpgSign = false
-```
-
-Change the remote url to https
-```
-git remote set-url origin https://benjamin-awd@github.com/benjamin-awd/PROJECTNAME.git
 ```
